--- a/demo.html
+++ b/demo.html
@@ -1,6 +1,6 @@
 <html>
-    <head><title>a demo</title></head>
+    <head><title>A Demo Page</title></head>
     <body>
-        <b>welcome to demo page</b>
+        <center><h1>Welcome to demo page!</h1></center>
     </body>
 </html>
